js/js.translator/testData/incremental/invalidation/companionProperties/lib1/l1.4.kt
class MyClass {
    companion object {
        konst stringProperty = "-1"
        konst intProperty = 2
        konst pairProperty = -1 to 2
        konst funcProperty = { 1 }
    }
}
